--- a/documentation/thesis/thesis_abstract.tex
+++ b/documentation/thesis/thesis_abstract.tex
@@ -8,11 +8,11 @@ different properties, i.e.~the direction of magnetisation, can deviate
 from each other. This affects the homogeneity of the field and the image
 acquisition.
 
-A passive shimming process is typically used to adjust the field
+A passive shimming process is typically used to adjust the B0 field
 afterwards. This is complex and time-consuming and requires manual
 corrections to the magnets used. To avoid this process, magnets can be
 systematically measured in advance. Sensor accuracy and repeatability
-Data acquisition, storage and subsequent analysis play an important role
+data acquisition, storage and subsequent analysis play an important role
 in this methodology.
 
 Several existing open source solutions implement individual parts, but
