--- a/documentation/thesis/thesis_document.tex
+++ b/documentation/thesis/thesis_document.tex
@@ -1245,11 +1245,9 @@ map. On the sphere is the magnetic field strength, which is detected by
 the sensor at the position. The transition from a fully positive field
 strength (red) to a negative field strength (blue) is clearly
 recognisable and corresponds to the orientation of the magnet in the
-holder.
-
-The magnet sensor is mounted on a movable arm, which can move \emph{180}
-degrees around the magnet on one axis. To be able to map the full
-sphere, the magnet is mounted on a turntable. This permits the
+holder. The magnet sensor is mounted on a movable arm, which can move
+\emph{180} degrees around the magnet on one axis. To be able to map the
+full sphere, the magnet is mounted on a turntable. This permits the
 manipulator to move a polar coordinate system.
 
 \begin{figure}
@@ -1284,10 +1282,9 @@ GM-70} telsameter shown in figure
 \ref{Voltcraft_GM70_teslameter_with_custom_(+pc)_interface_board_using_a_(+usb)_to_serial_converter_and_needed_additional_pull-up_resistors.png}
 is used, which has a measuring range of \emph{0T} to \emph{3T} with a
 resolution of \emph{0.1mT}. It offers an \emph{RS232} interface with a
-documented protocol for connection to a \gls{pc}.
-
-This connectivity makes it possible to make the device compatible with
-the unified sensor ecosystem using a separate
+documented protocol for connection to a \gls{pc}. This connectivity
+makes it possible to make the device compatible with the unified sensor
+ecosystem using a separate
 \href{https://github.com/RBEGamer/VoltcraftGM70Rest}{interface software}
 executable on the host \gls{pc}. However, it does not offer the range of
 functions that the unified sensor firmware offers.
@@ -1296,18 +1293,15 @@ Another option is a custom interface board between the meter and the PC.
 This is a good option as many modern \gls{pc}s or \gls{sbc}s no longer
 offer a physical \emph{RS232} interface. As with the other sensors, this
 interface consists of a \emph{Raspberry Pi Pico} with an additional
-level shifter.
-
-The teslameter is connected to the microcontroller using two free
-\gls{gpio}s in \gls{uart} mode. The firmware is adapted using a separate
-build configuration. In order to be able to read and correctly interpret
-the data from the microcontroller, the serial protocol of the sensor is
-implemented in a customised version of the \emph{CustomSensor} class as
-shown in listing \ref{lst:CustomSensorClass}.
-
-This software or hardware integration can be conducted on any other
-measuring device with a suitable communication interface and a known
-protocol thanks to the modular design.
+level shifter. The teslameter is connected to the microcontroller using
+two free \gls{gpio}s in \gls{uart} mode. The firmware is adapted using a
+separate build configuration. In order to be able to read and correctly
+interpret the data from the microcontroller, the serial protocol of the
+sensor is implemented in a customised version of the \emph{CustomSensor}
+class as shown in listing \ref{lst:CustomSensorClass}. This software or
+hardware integration can be conducted on any other measuring device with
+a suitable communication interface and a known protocol thanks to the
+modular design.
 
 \begin{figure}
 \centering
